--- a/ProjetoPratica/ProjetoPratica/ProjetoPratica.csproj
+++ b/ProjetoPratica/ProjetoPratica/ProjetoPratica.csproj
@@ -54,9 +54,7 @@
       <DependentUpon>BDPRII17178DataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Aula.cs" />
-    <Compile Include="CriarMateria.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="CriarMateria.cs" />
     <Compile Include="CriarMateria.Designer.cs">
       <DependentUpon>CriarMateria.cs</DependentUpon>
     </Compile>
